added pivot slider, and active voxel event, fixed faces for non cut meshes

--- a/index.html
+++ b/index.html
@@ -327,21 +327,27 @@
                     </div>
                 </div>
                 <span id="clicked"></span>
-                <span id="spinner" class="spinner"></span>
+                <span class="spinner"></span>
             </div>
             <div class="round-corner">
                 <canvas id="plot3d"></canvas>
+
+                <div class="slidecontainer" style="bottom: 55px">
+                    <input type="range" class="slider" name="pivot" min="0" max="100" value="0" oninput="document.set_pivot(this.value/100)">
+                </div>
+
                 <div class="slider_buttons">
                     <button class="slider_button" onclick="document.animateShapeChange(0)">0</button>
-                    <button class="slider_button" onclick="document.animateShapeChange(100)">1</button>
-                    <button class="slider_button" onclick="document.animateShapeChange(200)">2</button>
-                    <button class="slider_button" onclick="document.animateShapeChange(300)">3</button>
+                    <button class="slider_button" onclick="document.animateShapeChange(1)">1</button>
+                    <button class="slider_button" onclick="document.animateShapeChange(2)">2</button>
+                    <button class="slider_button" onclick="document.animateShapeChange(3)">3</button>
                 </div>
                 <div class="slidecontainer">
                     <div class="slider_marker" style="left: 33%"></div>
                     <div class="slider_marker" style="left: 66%"></div>
-                    <input type="range" class="slider" id="shape" name="shape" min="0" max="300" value="0" oninput="document.set_shape(this.value)">
+                    <input type="range" class="slider" id="shape" name="shape" min="0" max="300" value="0" oninput="document.set_shape(this.value/100)">
                 </div>
+                <span class="spinner"></span>
             </div>
         </div>
 
@@ -356,6 +362,19 @@
             let checkbox = document.getElementById("show_roi").checked;
             document.getElementById("plotImage2").style.display = checkbox ? "none" : "block";
         }
+
+        function set_active_voxel(voxel) {
+            document.active_voxel = voxel;
+            document.getElementsByName("voxel")[0].value = voxel;
+            form_to_url(document.querySelector('form'));
+
+            // Create a new event
+            var myEvent = new Event('voxel_changed');
+
+            // Dispatch the event
+            window.dispatchEvent(myEvent);
+        }
+        document.set_active_voxel = set_active_voxel
 
         fetch('static_data/all_component_ids.json', {}).then(function(response) {
             return response.json();
@@ -508,20 +527,23 @@
           panzoom.zoomWithWheel(event)
         })
 
-
-            function updatePointDisplay() {
-                        let x = document.getElementsByName("x")[0].value;
+        function updatePointDisplay() {
+            let active_voxel = document.active_voxel;
+            let x = document.getElementsByName("x")[0].value;
             let y = document.getElementsByName("y")[0].value;
             let canvas = document.getElementById("myCanvasPoint");
             let ctx = canvas.getContext("2d");
             ctx.clearRect(0, 0, canvas.width, canvas.height);
-            ctx.beginPath();
-            ctx.arc(x, y, 4/zoom_scale, 0, 2 * Math.PI, false);
-            ctx.rect(0, y, canvas.width, 4/zoom_scale);
-            ctx.rect(x, 0, 4/zoom_scale, canvas.height);
-            ctx.fillStyle = 'red';
-            ctx.fill();
+            if(active_voxel !== -1) {
+                ctx.beginPath();
+                ctx.arc(x, y, 4 / zoom_scale, 0, 2 * Math.PI, false);
+                ctx.rect(0, y, canvas.width, 4 / zoom_scale);
+                ctx.rect(x, 0, 4 / zoom_scale, canvas.height);
+                ctx.fillStyle = 'red';
+                ctx.fill();
             }
+        }
+
         plotImage.addEventListener('panzoomzoom', (event) => {
             zoom_scale = event.detail.scale;
             updatePointDisplay();
@@ -529,7 +551,6 @@
 
         function pixelValueInformation() {
             let form_data = get_form_data();
-            console.log("form_data", form_data.voxel)
             getPixelValue(form_data);
             updatePointDisplay();
         }
@@ -549,11 +570,10 @@
             let voxel = await getPixelVoxel(x, y);
             document.set_active_voxel(voxel);
             document.getElementsByName("voxel")[0].value = voxel;
+        });
 
-            console.log("pixel clicked", x, y, voxel);
-
+        window.addEventListener('voxel_changed', function(e) {
             pixelValueInformation();
-            form_to_url(document.querySelector('form'))
         });
 
         });
@@ -574,7 +594,10 @@
         document.camera = camera;
 
         let pt = await loadNpy("static_data/pt_flat.npy");
+        let vtx_flat = await loadNpy("static_data/vtx_flat.npy");
+        vtx_flat = Array.prototype.slice.call(vtx_flat.data);
         let vtx = await loadNpy("static_data/vtx.npy");
+        vtx = Array.prototype.slice.call(vtx.data)
 
         let pt2 = await loadNpy("static_data/pt_inflated.npy");
         let pt3 = await loadNpy("static_data/pt_pia.npy");
@@ -584,29 +607,71 @@
             // Define your points and vertices
             const geometry = new THREE.BufferGeometry();
             geometry.setAttribute('color', new THREE.Float32BufferAttribute(new Float32Array(pt.shape[0]*3), 3));
-            geometry.setIndex( Array.prototype.slice.call(vtx.data) );
+            geometry.setIndex( vtx );
             geometry.setAttribute( 'position', new THREE.BufferAttribute( new Float32Array(pt2.data), 3 ) );
 
             const material = new THREE.MeshBasicMaterial({vertexColors: true, side: THREE.DoubleSide});
             const mesh = new THREE.Mesh( geometry, material );
             scene.add(mesh);
 
-            let last_shape_index = 100;
+            let last_shape_index = 1;
+            let pivot = 0;
+            function set_pivot(index) {
+                pivot = index;
+                set_shape(last_shape_index);
+            }
             function set_shape(index) {
+                let p = pivot;
+                if(index < 1)
+                    p = pivot * index;
+                if(index < 1 && last_shape_index >= 1)
+                    mesh.geometry.setIndex( vtx_flat );
+                if(index >= 1 && last_shape_index < 1)
+                    mesh.geometry.setIndex( vtx );
                 last_shape_index = index;
-                index /= 100;
                 let pt_a = [pt, pt2, pt3, pt4][Math.floor(index)];
                 let pt_b = [pt, pt2, pt3, pt4][Math.ceil(index)];
                 let f = index % 1;
                 let array = mesh.geometry.getAttribute('position').array;
-                for (let i = 0; i < array.length; i += 1) {
+                /*for (let i = 0; i < array.length; i += 1) {
                     array[i] = pt_a.data[i]*(1-f) + pt_b.data[i] * f;
+                }*/
+                for(let i = 0; i < array.length; i += 3) {
+                    let point = [0, 0, 0];
+                    for(let j = 0; j < 3; j += 1)
+                        point[j] = pt_a.data[i + j]*(1-f) + pt_b.data[i + j] * f;
+                    if(i >= array.length/2)
+                        point = rotateAroundY(point, 90*p, -1.2, p)//-0.00240851 -0.2672709   0.22112776
+                    else
+                        point = rotateAroundY(point, -90*p, -1.2, p)//-0.00240851 -0.2672709   0.22112776
+                    for(let j = 0; j < 3; j += 1)
+                        array[i + j] = point[j];
                 }
                 mesh.geometry.getAttribute('position').needsUpdate = true;
                 update_active_voxel();
             }
-
+            //set_shape(last_shape_index);
             var currentAnimationFrame = null;
+
+            function rotateAroundY(point, angleDegrees, a, f) {
+                // Convert angle to radians
+                const theta = angleDegrees * Math.PI / 180.0;
+
+                // Translate the point to the origin by subtracting (0, 0, a)
+                const [x, y, z] = [point[0], point[1], point[2] - a];
+
+                // Perform the rotation around the y-axis
+                let xPrime = x * Math.cos(theta) + z * Math.sin(theta);
+                let yPrime = y;  // y-coordinate remains unchanged
+                let zPrime = -x * Math.sin(theta) + z * Math.cos(theta);
+
+                // Translate the point back to the original position by adding (0, 0, a)
+                const finalX = xPrime;
+                const finalY = yPrime;
+                const finalZ = zPrime + a * (1-f);
+
+                return [finalX, finalY, finalZ];
+            }
 
             function animateShapeChange(endIndex) {
                 let duration = 300;
@@ -651,6 +716,7 @@
             }
 
             document.animateShapeChange = animateShapeChange;
+            document.set_pivot = set_pivot;
             document.set_shape = set_shape;
 
             function set_mesh_colors(c) {
@@ -708,8 +774,6 @@ function onDocumentMouseClick(event) {
     mouse.x = ((event.clientX - canvasBounds.left) / canvasBounds.width) * 2 - 1;
     mouse.y = - ((event.clientY - canvasBounds.top) / canvasBounds.height) * 2 + 1;
 
-    console.log(onDocumentMouseClick, mouse)
-
     // Update the picking ray with the camera and mouse position
     raycaster.setFromCamera(mouse, camera);
 
@@ -719,33 +783,35 @@ function onDocumentMouseClick(event) {
     if (intersects.length > 0) {
         // Get the first intersected object
         var intersection = intersects[0];
-        console.log(intersects)
 
         // Get the closest vertex (you can also loop through vertices to find the closest one)
         var vertexIndex = intersection.face.a;
-        set_active_voxel(vertexIndex);
-        document.getElementsByName("voxel")[0].value = vertexIndex;
-        document.pixelValueInformation();
+        document.set_active_voxel(vertexIndex);
+    }
+    else {
+        document.set_active_voxel(-1);
     }
 }
-let active_voxel = undefined;
-function set_active_voxel(vertexIndex) {
-    console.log("set_active_voxel", vertexIndex)
-    active_voxel = vertexIndex;
-    update_active_voxel();
-}
-document.set_active_voxel = set_active_voxel
-function update_active_voxel() {
-    let a = mesh.geometry.getAttribute('position').array
-    console.log("update_active_voxel", active_voxel, a[active_voxel*3])
-    var clickedVertex = a[active_voxel*3];
-    var clickedVertex1 = a[active_voxel*3+1];
-    var clickedVertex3 = a[active_voxel*3+2];
 
-    cube.position.set(clickedVertex, clickedVertex1, clickedVertex3);
-    cube2.position.set(clickedVertex, clickedVertex1, clickedVertex3);
-    cube3.position.set(clickedVertex, clickedVertex1, clickedVertex3);
-    cube4.position.set(clickedVertex, clickedVertex1, clickedVertex3);
+window.addEventListener('voxel_changed', function(e) {
+    update_active_voxel();
+});
+
+function update_active_voxel() {
+    let active_voxel = document.active_voxel;
+
+    var [x, y, z] = [-1000, -1000, -1000]
+    if(active_voxel !== -1) {
+        let a = mesh.geometry.getAttribute('position').array
+        x = a[active_voxel*3];
+        y = a[active_voxel*3+1];
+        z = a[active_voxel*3+2];
+    }
+
+    for(let obj of [cube, cube2, cube3, cube4]) {
+        obj.position.set(x, y, z);
+
+    }
 }
 
         animate();
