change colors of inflate buttons

--- a/index.html
+++ b/index.html
@@ -293,6 +293,7 @@
 	height: 35px;
 	/*filter: brightness(0.3);*/
     opacity: 0.5;
+    transition: background-color 0.5s ease-in-out;
 }
 .img_inflated {
     background-image: url("img/inflated.png");
@@ -305,6 +306,9 @@
 }
 .img_wm {
     background-image: url("img/wm.png");
+}
+.img_selected {
+    background-color: darkred;
 }
     </style>
 </head>
