--- a/index.html
+++ b/index.html
@@ -370,6 +370,10 @@
             <input type="button" value="all" id="btn_select_all">
             <label><span>show roi</span><input type="checkbox" value="on" id="show_roi" name="show_roi" checked
                                                onclick="toggle_roi()"></label>
+
+            <label><span>show matrix</span><input type="checkbox" value="on" id="show_matrix" name="show_matrix"
+                                               onclick="update_plot()"></label>
+
             <input type="hidden" name="x" value="0"/>
             <input type="hidden" name="y" value="0"/>
             <input type="hidden" name="voxel" value="0"/>
@@ -416,6 +420,10 @@
             </div>
             <span class="spinner"></span>
         </div>
+        <div>
+            <canvas id="matrix" style="width: 400px; image-rendering: pixelated;"></canvas>
+            <span id="matrix_clicked"></span>
+        </div>
         <div class="button_control_top">
             <div class="button_transparent" onclick="toggle_3d()"></div>
         </div>
@@ -458,6 +466,7 @@
             const component_ids = formData.getAll("component_ids");
             const layer_ids = formData.getAll("layer_ids").map(x => parseInt(x));
             const runs = formData.get("runs");
+            const show_matrix = formData.get("show_matrix");
             const min_subject_overlap_count = parseInt(formData.get("min_subject_overlap_count"));
 
             let component_ids_array = component_ids.map(x => init_data.all_component_ids.indexOf(parseInt(x)));
@@ -483,6 +492,7 @@
                 y,
                 voxel,
                 show_groups,
+                show_matrix,
             }
         }
 
@@ -518,6 +528,7 @@
         function update_plot() {
             console.time("Load");
             let form_data = get_form_data();
+            document.getElementById("matrix").parentElement.style.display = form_data.show_matrix ? "block" : "none";
 
             if (form_data.show_groups)
                 startWorker2(form_data);
@@ -605,6 +616,14 @@
             pixelValueInformation();
         });
 
+        window.addEventListener('display_components', async function (e) {
+            let element_examples = document.getElementById("componentExamples");
+            element_examples.innerHTML = "";
+            for (let i of e.detail.components) {
+                add_row(element_examples, i);
+            }
+        });
+
     });
 </script>
 
@@ -615,7 +634,10 @@
     const view = add_2D_view(document.getElementById("plotImage"));
 
     window.addEventListener('voxel_data_changed', async function (e) {
+        console.log(e.detail);
         await view.set_voxel_data(e.detail.image);
+        if(e.detail.matrix_overlap)
+            await view.plot_overlap_matrix(e.detail.matrix_overlap);
     });
 
     window.addEventListener('voxel_selected_changed', async function (e) {
@@ -642,6 +664,7 @@
 
     window.addEventListener('voxel_data_changed', async function (e) {
         await brain_3d.set_voxel_data(e.detail.image);
+        scene.onWindowResize();
     });
 
     window.addEventListener('voxel_selected_changed', async function (e) {
